feat: 更新ai服务